--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>pl.byteit</groupId>
-	<artifactId>mbank-scrapper</artifactId>
+	<artifactId>mbank-scraper</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -88,7 +88,7 @@
 						<configuration>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>pl.byteit.mbankscrapper.App</mainClass>
+									<mainClass>pl.byteit.mbankscraper.App</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
