--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
 						<configuration>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>pl.byteit.mbankscraper.App</mainClass>
+									<mainClass>pl.byteit.scraper.App</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
